Completed Days/Day26/manifest.yaml
apiVersion: v1 
kind: Pod 
metadata:
  name: frontend
  labels:
    role: frontend
spec:
  containers:
  - name: nginx
    image: nginx
    ports: 
    - containerPort: 80
---
apiVersion: v1 
kind: Service 
metadata: 
  name: frontend
spec: 
  selector: 
    role: frontend 
  ports: 
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    role: backend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    role: backend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    name: mysql
spec:
  containers:
  - name: mysql
    image: mysql:5.7
    ports:
    - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    name: mysql
  ports:
  - port: 3306
    targetPort: 3306
